syntax = "proto3";
package se.mejsla.camp.mazela.network.common.protos ;

message AuthenticateRequest {
    string name = 1;
    string password = 2 ;
}

message Uuid {
    fixed64 leastSignificantID = 2;
    fixed64 mostSignificantID = 3;
}

message Color {
    int32 red = 1;
    int32 green = 2;
    int32 blue = 3;
}

message AuthenticationReply {
    bool authenticated = 1;
    Uuid uuid = 2;
}

message JoinPlayer {
    string nickname = 1 ;
}

message Coordinate {
    float x = 1;
    float y = 2 ;
}

message PlayerEntity {
    Uuid uuid = 1;
    Coordinate coords = 2;
    int32 score = 3;
    Color color = 4;
    string name = 5;
}

message ScoreEntity {
    Uuid uuid = 1;
    Coordinate coords = 2;
    int32 score = 3;
    Color color = 4;
}

message GameboardUpdate {
    message EntityUpdate {
        enum EntityType {
            PlayerEntity = 0 ;
            ScoreEntity = 1 ;
        }
        EntityType entity_type = 1 ;
        oneof content {
            PlayerEntity player_entity = 2 ;
            ScoreEntity score_entity = 3 ;
        }
    }
    repeated EntityUpdate updates = 1 ;
}

message ClientInput {
    bool up = 1 ;
    bool down = 2 ;
    bool left = 3 ;
    bool right = 4 ;
}

message Envelope {
    enum MessageType {
        AuthenticateRequest = 0 ;
        AuthenticationReply = 1 ;
        JoinPlayer = 2 ;
        GameboardUpdate = 3 ;
        ClientInput = 4 ;
        DisconnectClient = 5 ;
    }
    MessageType message_type = 1 ;
    oneof content {
        AuthenticateRequest authentication_request = 2 ;
        AuthenticationReply authentication_reply = 3 ;
        JoinPlayer join_player = 4 ;
        GameboardUpdate gameboard_update = 5 ;
        ClientInput client_input = 6 ;
    }
}